--- a/Financial Decisions/Basics(rate,growth, compound).ipynb
+++ b/Financial Decisions/Basics(rate,growth, compound).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. The future value (cumulative return) of a 1000 investment which grows at a rate of 6% per year for 30 years"
+    "### 1. The future value (cumulative return) of a 1000 investment which grows at a rate of 6\\% per year for 30 years"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. The value of a 1000 investment which grows at a rate of 5% per year for 30 years in a row compounded yearly, quarterly and monthly"
+    "### 2. The value of a 1000 investment which grows at a rate of 5\\% per year for 30 years in a row compounded yearly, quarterly and monthly"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. The future value of a 1000 investment that depreciates in value by 3% per year for 10 years"
+    "### 3. The future value of a 1000 investment that depreciates in value by 3\\% per year for 10 years"
    ]
   },
   {
