--- a/Financial Decisions/WACC.ipynb
+++ b/Financial Decisions/WACC.ipynb
@@ -95,6 +95,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using WACC as the discount rate and calculating the net present value of projects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cf_project1 = np.array([-1000000,   200000,   250000,   300000,   350000,   400000,\n",
+    "         450000,   500000,   550000,   600000])\n",
+    "cf_project2 = np.array([-1000000,   150000,   225000,   300000,   375000,   425000,\n",
+    "         500000,   575000,   600000,   625000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project 1 NPV: 856073.18\n",
+      "Project 2 NPV: 904741.35\n"
+     ]
+    }
+   ],
+   "source": [
+    "npv_project1 = npf.npv(wacc, cf_project1)\n",
+    "print(\"Project 1 NPV: \" + str(round(npv_project1, 2)))\n",
+    "\n",
+    "npv_project2 = npf.npv(wacc, cf_project2)\n",
+    "print(\"Project 2 NPV: \" + str(round(npv_project2, 2)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
